# csa01

./: .gitignore  Dockerfile  README.md  _server.py  agent.py  agent_llm.py  agent_py_output.txt  agent_rule_based.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  server7860.py  tasks.py  test_rule_agent.py
app/: dataset.py  env.py  graders.py  models.py  tasks.py  test_env.py
server/: app.py  main.py
